content/docs/2.4.0/content-files.adoc
= Content Files
Jonathan Bullock
2015-05-24
:jbake-type: page
:jbake-tags: documentation
:jbake-status: published
:idprefix:

== Content Files

=== Metadata Header

The metadata header defines some basic information that JBake uses when baking the content file.

Each raw HTML or Markdown content file *must* have a metadata header in it which looks like this:

----
title=Weekly Links #2
date=2013-02-01
type=post
tags=weekly links, java
status=published
~~~~~~
----

In the header you *must* have at least the **status** & **type** fields, the rest are optional. The only exception to this rule is if 
you define a default status in your link:#configuration[configuration] file.

For an AsciiDoc formatted content file the metadata header section is optional, the JBake metadata can be defined in the AsciiDoc document header itself like so:

----
= Project Structure
Jonathan Bullock
2013-10-17
:jbake-type: page
:jbake-tags: documentation, manual
:jbake-status: published
----

NOTE: JBake related attributes included in the AsciiDoc header require the `jbake-` prefix to avoid any collisions.

==== Status

You have 3 options for the status field:

* `draft` - drafts are rendered the same as published content however they are given a "-draft" suffix, for example `first-post-draft.html`, but not included in any published collections
* `published`  - published content is rendered and included in the published collections
* `published-date` - providing content date is equal to or past current date content will be considered published and included in the published collections

==== Type

You can choose what template file your content file will be mixed with by changing the value of the `type` field. By default there are 2 standard types:

* `type=post` will mean the content file will be mixed with the template: post.ftl
* `type=page` will mean the content file will be mixed with the template: page.ftl

You can also define more types in your project configuration to give you more flexibility in your project, for details of this please see <<custom_templates>>.

==== Custom Metadata

You can also define custom metadata in the header that can be exposed to the templates, for example:

----
summary=This is a summary of the larger post
----

And access it in the templates like so:

----
<p>${content.summary}</p>
----

This feature is extremely useful when you want to control the rendering of extra market in the templates such as https://disqus.com/[Disqus] for comments 
on certain posts/pages or to display images using some JavaScript library like https://jquery.com/[jQuery].

==== Complex Custom Metadata

If you need to define a complex structure of metadata you can use JSON format to achieve this, here's an example:

----
type=page
og={"description": "Something"}
----

WARNING: The JSON content must be contained within a single line and cannot span multiple lines.

This complex data is then accessible from the templates like this:

----
<#if content?? && content.og??> <1>
	<meta property="og:description" content="${content.og.description}"/> <2>
</#if>
----

<1> Checks the `content` map is not null and that the `content.og` map is not null
<2> Outputs the `description` value from the `content.og` map

=== Content Body

Everything after the metadata header is considered the content body and made available to the templates, after being converted to HTML if required in the case of 
Markdown or AsciiDoc.
